--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1583,7 +1583,7 @@ ul.tagposts-list li {
     }
 }
 
-.archive-image img {
+.archive-image .detacada-img {
     vertical-align: top;
     width: 100%;
 }
