--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2435,6 +2435,7 @@ ul.tagposts-list li {
 @media (max-width: 1000px){
     .slider-placa-titulo {
         height: 100px;
+        padding-bottom: 40px;
     }
 }
 
