--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2404,10 +2404,30 @@ ul.tagposts-list li {
 @media (max-width: 1000px){
     .placa-next.mobile{
         display: block !important;
-        width: 17px;
-        height: 17px;
-        right: 10px;
+        width: 20px;
+        position: absolute;
+        right: 43px;
+        height: 20%;
+        bottom: 0px;
+        background: #e7d117;
+        padding: 20px;
     }
+    .placa-next.mobile::before {
+    content: '';
+    width: 17px;
+    height: 17px;
+    display: inline-block;
+    border: 2px solid #fff;
+    border-left: 0px;
+    transform: rotate(45deg);
+    background: transparent;
+    border-bottom: 0px;
+    cursor: pointer;
+    margin-right: 9px;
+    padding: 1px;
+    position: absolute;
+    bottom: 33px;
+}
 }
 
 .placa-next::before {
