--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3501,6 +3501,12 @@ article .post-content .has-content-area {
     margin-left: 12%;
 }
 
+@media (max-width: 980px){
+    .search-post{
+        margin-left: 0px;
+    }
+}
+
 .search-post .imagen {
     width: 200px;
     height: 200px;
