--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3620,7 +3620,7 @@ article .post-content .has-content-area {
 @media (max-width: 500px){
     .search .page-header .page-description {
         width: 100%;
-        
+        left: 0;
     }
 }
 
