--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -792,6 +792,7 @@ input:-internal-autofill-selected {
 
 .trending-post .user-actions{
     display: inline-block;
+    margin-top: 10px;
 }
 
 .trending-post .user-actions button{
