--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4538,6 +4538,16 @@ AUTHOR PAGE
     height: 100%;
     z-index: 2;
     width: 40px;
+    background: transparent;
+}
+
+.historias .slick-arrow::before{
+    content: '';
+    width: 15px;
+    height: 15px;
+    border-right: 2px solid #e7d22d;
+    border-bottom: 2px solid #e7d22d;
+    transform: 300ms ease;
 }
 
 .historias .slick-prev{
