--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4605,11 +4605,16 @@ AUTHOR PAGE
     align-items: center;
     justify-content: center;
     margin: 0;
+    margin-right: 2px;
+}
+
+.historias .slick-dots li button:last-child{
+    margin-right: 0px !important;
 }
 
 .historias .slick-dots li button::before{
     width: 100%;
-    height: 10px;
+    height: 4px;
     content: '';
     border-radius: 0;
     border: 0px solid #e7d117;
