--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2215,7 +2215,7 @@ ul.tagposts-list li {
 
 .opiniones {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin-top: -60px;
     position: relative;
