--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4521,10 +4521,21 @@ AUTHOR PAGE
     overflow: hidden;
     padding: 40px;
 }
+@media (max-width: 500px){
+    .historias-container{
+        padding: 40px;
+    }
+}
 
 .historias{
     max-width: 300px;
     margin: 0 auto;
+}
+
+@media (max-width: 500px){
+    .historias{
+        max-width: 100%;
+    }
 }
 
 .historias .slick-list{
