--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4517,7 +4517,7 @@ AUTHOR PAGE
     width: 100%;
     position: fixed;
     height: 100vh;
-    z-index: 99;
+    z-index: 9999999;
     overflow: hidden;
     padding: 40px;
 }
