--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4524,6 +4524,9 @@ AUTHOR PAGE
 @media (max-width: 500px){
     .historias-container{
         padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
