--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1495,6 +1495,8 @@ ul.tagposts-list li {
 .advertical {
     display: flex;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 
