--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4667,3 +4667,11 @@ AUTHOR PAGE
     background: rgba(0,0,0,0.26);
     width: 100%;
 }
+
+
+
+/* ADS */
+#div-gpt-ad-1543340613980-0{
+width: 200px !important;
+height: 200px !important;
+}
