--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4678,3 +4678,30 @@ AUTHOR PAGE
 width: 200px !important;
 height: 200px !important;
 }
+
+/* AGREGADO LUCAS */ 
+@media only screen and (max-width: 991px) {
+    .onlymobile{
+        display:block;
+    } 
+}  
+
+
+@media only screen and (min-width: 991px) {
+
+.trending-post .titular {
+    display: flex;
+    padding: 15px;
+    margin-bottom: 5px;
+    position: absolute;
+    z-index: 1 !important;
+    background: #fff !important;
+    width: 59% !important;
+    opacity: 0.8 !important;
+}
+
+.onlymobile{
+    display:none;
+}
+
+}
