--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4702,7 +4702,7 @@ height: 200px !important;
     position: absolute;
     z-index: 1 !important;
     background: #fff !important;
-    width: 100% !important;
+    width: 825px !important;
     opacity: 0.8 !important;
 }
 
