--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -699,6 +699,7 @@ input:-internal-autofill-selected {
 .trending-post {
     margin-bottom: 50px;
     transition: 300ms ease;
+    position: relative;
 }
 
 .trending-post .titular {
