--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4711,8 +4711,7 @@ height: 200px !important;
     margin-bottom: 5px;
     position: absolute;
     z-index: 1 !important;
-    background: #fff !important;
-    opacity: 0.8 !important;
+    background: rgba(255,255,255,0.8) !important;
 }
 
 .onlymobile{
