--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -274,7 +274,7 @@ h2:before {
 
 .header-navigation {
     margin-left: auto;
-    width: 77%;
+    width: 53%;
 }
 
 @media (max-width: 980px){
@@ -451,7 +451,12 @@ h2:before {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    max-width: 1100px;
+    max-width: 1150px;
+}
+
+.menu-bar .search{
+    background: #5d5d5d;
+    padding: 5px;
 }
 
 header#masthead {
