--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3549,6 +3549,12 @@ article .post-content .has-content-area {
     padding: 10px 0;
 }
 
+@media (min-width: 980px){
+    .search-bar{
+        display: none;
+    }
+}
+
 /* END SEARCH BAR*/
 
 .search-post {
