--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -273,8 +273,7 @@ h2:before {
 }
 
 .header-navigation {
-    margin-left: auto;
-    width: 53%;
+    margin-left: 24%;
 }
 
 @media (max-width: 980px){
@@ -449,13 +448,12 @@ h2:before {
 
 .menu-bar {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     max-width: 1150px;
 }
 
 .menu-bar .search{
-    background:;
     padding: 5px;
 }
 
