--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4743,6 +4743,11 @@ height: 200px !important;
 }
 
 /* AGREGADO LUCAS */ 
+
+.timeline-Header , .timeline-Footer {
+    display:none;
+}
+
 @media only screen and (max-width: 991px) {
     .onlymobile{
         display:block; 
