--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2480,8 +2480,7 @@ ul.tagposts-list li {
 }
 
 @media (max-width: 1000px){
-    .placa-next,
-    .placa-prev{
+    .placa-next{
         display: none;
     }
 }
