--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2568,6 +2568,12 @@ ul.tagposts-list li {
     margin-right: 20px;
 }
 
+@media (max-width:1000px){
+    .placa-like::before{
+        display: none;
+    }
+}
+
 .placa-like i {
     color: #fff;
 }
