--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4797,6 +4797,9 @@ height: 200px !important;
         flex-direction: column;
         justify-content: center;
     }
+    .ad-long {
+        display: block !important;
+    }
 }  
 
 
