--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2289,13 +2289,17 @@ ul.tagposts-list li {
     background: #b29f93;
     padding: 10px;
     color: #fff;
+    height: 38px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .opinion .autor p {
-    margin: 10px;
-    line-height: 0px;
+    margin: 0 10px;
     font-size: 15px;
     font-family: 'Bree Serif', serif;
+    display: inline-block;
 }
 
 .opinion .imagen {
@@ -2319,9 +2323,8 @@ ul.tagposts-list li {
 
 .opinion .autor a {
     color: #fff !important;
-    display: block;
-    width: 100%;
-    height: 100%;
+    display: inline-block;
+    line-height: 0px;
 }
 
 .opinion .titulo a {
